- list input & HID devices in report.bug (mga#20327)

Version 17.72 - 25 February 2017
- partitioning:
  o fix too big window due to too big translations (mga#20360)
  o allow a BIOS boot partition to be located on any disk (mga#20161)
  o fix auto-allocation of BIOS boot partitions (mga#20161, mga#19888)
  o don't suggest mountpoint for ESP when doing a legacy boot install (mga#20164)
  o fix bugs in sync'ing the kernel's partition table cache (mga#20074)
  o detect and handle DOS "Empty" partition types (mga#20074)
- fix enabling of nofsync through other macro means for rpm.org
- recognize new kernel-4.8 drivers

Version 17.71.1 - 17 February 2017

- update and merge translations from Mageia
- sync nonfree firmware list with kernel-4.9
- use SHA-512 instead of blowfish as the default password encryption (mga#20342)

Version 17.71 - 18 January 2017

- partitioning_wizard:
  o fix bug in detecting whether a BIOS boot partition is required (mga#19935)
- fix inserting extended partition in the middle

Version 17.70 - 17 January 2017

- peek-a-boo!

Version 17.69 - 12 January 2017

- bootloader:
  o disable audit logging as it floods the logs
- partitioning:
  o fix exception when clearing all partitions on !UEFI (mga#20083)
- recognize new kernel-4.9 drivers

Version 17.68 - 14 December 2016

- fix progress bar on i586 (mga#19930)

Version 17.67 - 13 December 2016

- fix a crash introduced in 17.66

Version 17.66 - 13 December 2016

- fix more i586 problems with int64 (mga#19933, mga#19930)

Version 17.65 - 12 December 2016

- bootloader configuration:
  o describe what skipping os-prober does (mga#18538)
  o show generic help too when using grub2
- fix i586 installation broken by int64 (mga#19895)

Version 17.64 - 11 December 2016

- more int64 init (mga#19895)

Version 17.63 - 9 December 2016

- force use of int64 for installed package size on i586 (mga#19895)

Version 17.62 - 1 December 2016

- left background for Mageia 6 sta2
- add grub2-editenv in list.xml
