@@ -1,3 +1,7 @@
+- installer options handling:
+  o fix default value for 'compssListLevel' (mga#20551)
+    (both being post mga5 regression)
+
 - list input & HID devices in report.bug (mga#20327)
 
 Version 17.72 - 25 February 2017
